# Database

./: .gitignore  CMakeLists.txt  compile_commands.json  concept.txt  run  run.sh
code/: header.h  main.cpp
code/error/: error.cpp  error.h
code/file/: file_handling.cpp  file_handling.h
code/handleSql/: handleSql.cpp  handleSql.h  sql.h
code/handleSql/lexer/: lexer.cpp  lexer.h
code/handleSql/parser/: parser.cpp  parser.h
code/menu/: menu.cpp  menu.h
code/window/: window.cpp  window.h
try/: createFile.cpp  run.sh  testLexer.cpp
